# redis_hooks

./: .gitignore  LICENSE  dev.yaml  docker-compose.yaml
.github/workflows/: release.yaml
conf/: redis.conf  settings.yaml
redis_hooks/: Cargo.toml  Dockerfile
redis_hooks/src/: lib.rs
