[package]
name = "redis_hooks"
version = "99.99.99"
authors = ["ssarwar@gmail.com"]
edition = "2021"
description = "A toolkit for building Redis modules in Rust"
license = "MIT"
repository = "https://github.com/shawnsarwar/redis_hooks"
readme = "README.md"
keywords = ["redis", "plugin", "hooks"]
categories = ["database"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "redis_hooks"

[dependencies]
redis-module = { version="1.0", features = ["experimental-api"]}
ureq = { version = "2.6.2", features = ["json"] }
config = { version = "0.13.1", features = ["yaml"] }
lazy_static = "1.4.0"
